--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="card">
                 <div class="card-front">
                     <div class="left">
-                        <img src="images/codeHunter.png" >
+                        <img src="codeHunter.png" >
                         <h4><span>Web</span> Design</h4>
                     </div>
                     <div class="right">
