--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>                    
                 </div>
                 <div class="card-back">
-                    <img src="images/codeHunter.png" />
+                    <img src="codeHunter.png" />
                 </div>
             </div>
         </div>
